--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 60px auto;
-    max-width: 800px;
+    /* max-width: 800px; */
 }
 h1 {
     font-size: 96px;
@@ -71,4 +71,10 @@ p {
     line-height: 1.5;
     text-align: center;
     margin: 10px;
+}
+nav {
+    margin-bottom: 40px;
+}
+.container-fluid{
+    
 }
